Modified existing pages

--- a/Solar/html/contactus.html
+++ b/Solar/html/contactus.html
@@ -11,27 +11,15 @@
         <h1>Solar Solutions</h1>
         <nav>
             <a href="index.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="services.html">Services</a>
+            <a href="aboutus.html">About Us</a>
             <a href="estimate.html">Solar Estimate</a>
-            <a href="contact.html">Contact</a>
+            <a href="analytics.html">Estimate Analytics</a>
+            <a href="contactus.html">Feedback</a>
         </nav>
     </header>
 
     <main>
         <section class="contact-section">
-            <h1>Contact Us</h1>
-            <p>If you have any questions, please reach out using the contact information below.</p>
-
-            <h2>Contact Emails</h2>
-            <ul>
-                <li>General Inquiries: <a href="mailto:info@solarsolutions.com">info@solarsolutions.com</a></li>
-                <li>Support: <a href="mailto:support@solarsolutions.com">support@solarsolutions.com</a></li>
-                <li>Sales: <a href="mailto:sales@solarsolutions.com">sales@solarsolutions.com</a></li>
-            </ul>
-
-            <h2>Leave Feedback</h2>
-            <p>We value your feedback! Please leave your comments below.</p>
 
             <form id="feedbackForm" class="feedback-form">
                 <label for="firstName">First Name:</label>
@@ -59,7 +47,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2023 Solar Solutions. All rights reserved.</p>
+        <p>&copy; 2024 Solar Solutions. All rights reserved.</p>
     </footer>
 
     <script>
