Final_Static_No_more_modifications

--- a/Solar/html/aboutus.html
+++ b/Solar/html/aboutus.html
@@ -61,6 +61,14 @@
         <div class="github-link">
             <a href="https://github.com/meghanayarrabothula/DIS-Assignment-3" target="_blank">View Our GitHub</a>
         </div>
+        <!-- Git Logs Section -->
+    <div class="git-logs">
+        <h3>Git Logs</h3>
+        <div class="git-log-images">
+            <img src="../css/images/git-log1.jpg" alt="Git Log 1" class="git-log">
+            <img src="../css/images/git-log2.jpg" alt="Git Log 2" class="git-log">
+        </div>
+</div>
     </main>
 
     <footer>
